[gd_scene load_steps=29 format=2]

[ext_resource path="res://GUI/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://GUI/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/sprites/kitten2.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 37, 27 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 37, 0, 37, 27 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 74, 0, 37, 27 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 111, 0, 37, 27 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 27, 37, 27 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 37, 27, 37, 27 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 74, 27, 37, 27 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 111, 27, 37, 27 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 54, 37, 27 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 37, 54, 37, 27 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 74, 54, 37, 27 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 111, 54, 37, 27 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 81, 37, 27 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 37, 81, 37, 27 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 74, 81, 37, 27 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 111, 81, 37, 27 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 108, 37, 27 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 37, 108, 37, 27 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 74, 108, 37, 27 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 111, 108, 37, 27 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 135, 37, 27 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 37, 135, 37, 27 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 74, 135, 37, 27 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 111, 135, 37, 27 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="WinScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 896.0
margin_bottom = 472.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 194.0
margin_top = 93.0
margin_right = 702.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 15
size_flags_vertical = 15
theme = ExtResource( 2 )

[node name="Kitten2" type="AnimatedSprite" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
position = Vector2( 395, -22 )
scale = Vector2( 4, 4 )
frames = SubResource( 25 )
frame = 2
playing = true

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 508.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/PanelContainer"]
margin_left = 16.0
margin_top = 24.0
margin_right = 492.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 476.0
margin_bottom = 101.0
text = "you found kitten!
Way to go, robot!"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 508.0
margin_bottom = 286.0
custom_constants/separation = 32
alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 280.0
margin_bottom = 85.0
theme = ExtResource( 2 )
text = "RESTART"

[node name="QuitButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 456.0
margin_bottom = 85.0
theme = ExtResource( 2 )
text = "QUIT"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
